tests/type_errors/map_index_assign_wrong_type.nos
# expect_error: mismatch
# m["key"] = value should enforce value type matches map's value type
main() = {
  var m: Map[String, Int] = %{ "a": 1 }
  m["b"] = "two"
  m
}
